src/sass/base/_typography.scss
// Heading sizes
h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  @include secondary-font(400);

  &.contrast {
    border-bottom:10px solid color(ben-franklin-blue);
  }

}

//add header classes
@each $size, $headers in $header-styles {
  @include breakpoint($size) {
    @each $header, $font-size in $headers {
      .#{$header} {
        font-size: map-values($font-size) + px;
      }
    }
  }
}


h1, .h1{
  padding:0;
  margin-top:rem-calc(16);
  margin-bottom:rem-calc(16);
  letter-spacing:.03rem;
}

h2, .h2 {
  padding:0;
  margin:rem-calc(13 0);
  letter-spacing:.03rem;
}

h3, .h3{
  letter-spacing:.03rem;
  border-bottom: none;
  padding:0;
}

.tertiary-content{
  h2{
    margin-top:0;
  }
  h3{
    color: color(black);
    background: color(ghost-gray);
    font-size: rem-calc(25);
    margin-top: $spacing-large;
    margin-bottom: $spacing-medium;

    @include breakpoint(medium) {
      padding: 0 $spacing-medium;
    }

  }
}

// Paragraphs + heading interaction
article{

  h1 + p,
  h2 + p,
  h3 + p,
  h4 + p,
  h5 + p,
  h6 + p{
    margin-top:0;
  }

  p + h1,
  p + h2,
  p + h3,
  p + h4,
  p + h5,
  p + h6{
    margin-top:$spacing-large;
  }

  h2 + h3{
    margin-top:$spacing-small;
  }

}
blockquote{
  margin: 0 $spacing-medium $spacing-medium $spacing-small;
}

blockquote + h1,
blockquote + h2,
blockquote + h3,
blockquote + h4,
blockquote + h5,
blockquote + h6{
  margin-top:$spacing-large;
}
// Links
a:link, a:visited{
  @extend %link-styles;
}
a:hover, a:active, a:focus {
  color:color(dark-gray);
}

.small-text {
  color: color(dark-gray);
  font-size: rem-calc(13);
  display:block;
}

// Tooltip
.tooltip {
  font-size:rem-calc(12);
  p{
    font-size:rem-calc(12);
    margin:rem-calc(6 0);
  }
}

// External Links
.external::after {
  font-family: "FontAwesome";
  content: "\f08e";
  font-size:rem-calc(12);
  padding:0 5px;
}

.callout{
  border-left:5px solid color(flyers-orange);
}

article {
  ol, ul {
    overflow: hidden;
    padding-left: 1.5rem;
    + p {
      margin-top:$spacing-medium;;

    }
  }
}

